<resources>

    <!--Title -->
    <string name="app_name">Sildren</string>
    <string name="title_activity_main">실드런</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">채팅</string>
    <string name="title_notifications">알림</string>
    <string name="title_map">지도</string>
    <string name="title_camera">카메라</string>


    <!--Hint-->
    <string name="hint_user_id">아이디</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_phone_number">핸드폰 번호</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_birth">생일</string>
    <string name="hint_name">이름</string>
    <string name="hint_title">제목</string>
    <string name="hint_location">위치</string>
    <string name="hint_recruit">모집 인원</string>
    <string name="hint_content">내용</string>
    <string name="hint_date">날짜</string>
    <string name="hint_start_time">시작</string>
    <string name="hint_end_time">종료</string>

    <!-- activity names -->
    <string name="main_activity">Home Activity</string>


    <!-- button text-->
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="info_btn">내용 자세히 보기</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>


    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>

    <string name="selected_bitmap">selected_bitmap</string>

    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>


    <string name="selected_image">selected_image</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_content">content</string>
    <string name="field_date">date</string>
    <string name="field_startTime">startTime</string>
    <string name="field_endTime">endTime</string>
    <string name="field_title">title</string>
    <string name="field_location">location</string>
    <string name="field_recruit">recruit</string>


    <string name="view_comments_fragment">View Comments</string>
    <string name="view_info_fragment">View Info</string>

    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
</resources>


