<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/info_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_border_bottom">

        <ImageView
            android:id="@+id/imageShare"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:scaleType="centerCrop" />

        <!--<EditText-->
            <!--android:id="@+id/caption"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_toRightOf="@+id/imageShare"-->
            <!--android:background="@null"-->
            <!--android:hint="내용" />-->

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/relLayout2"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/post_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:text="@string/hint_title"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/field_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:id="@+id/loc_text"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/hint_location"
                    android:paddingRight="5dp"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/info_location_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_toRightOf="@+id/loc_text"
                    android:background="@drawable/vector_map"
                    android:layout_gravity="end"/>

                <EditText
                    android:id="@+id/field_location"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_toRightOf="@+id/info_location_button"
                    android:inputType="text" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_date"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/field_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:longClickable="false"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_start_time"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/field_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:inputType="time"
                    android:longClickable="false"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_end_time"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/field_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:inputType="time"
                    android:longClickable="false"
                    android:textAlignment="center" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_recruit"
                    android:paddingRight="5dp"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/field_recruit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_content"
                    android:paddingRight="5dp"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/field_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
</merge>